# suxiaobei-bot

./: README.md
chem-bot-plus/: .env.prod  README.md  bot.py  pyproject.toml
chem-bot-plus/chem-bot-plus/plugins/chem_bot_main/: 12  __init__.py  database.py  htmlGenerate.py  imageprocess.py  test.py
chem-bot-plus/chem-bot-plus/plugins/chem_bot_main/database/: keywords.csv  kick.csv
chem-bot-plus/chem-bot-plus/plugins/mine_sweeper/: __init__.py
